RESOLVED FIXED144370
Deadlock on applications using JSContext on non-main thread
https://bugs.webkit.org/show_bug.cgi?id=144370
Summary Deadlock on applications using JSContext on non-main thread
Joseph Pecoraro
Reported 2015-04-28 18:56:52 PDT
* SUMMARY Deadlock on applications using JSContext without main thread. For the original case where we made this synchronous we have a suitable SPI workaround (JSRemoteInspectorStart).
Attachments
[PATCH] Proposed Fix (1.75 KB, patch)
2015-04-28 18:59 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2015-04-28 18:57:00 PDT
Joseph Pecoraro
Comment 2 2015-04-28 18:59:07 PDT
Created attachment 251914 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2015-04-28 20:58:02 PDT
Comment on attachment 251914 [details] [PATCH] Proposed Fix Clearing flags on attachment: 251914 Committed r183526: <http://trac.webkit.org/changeset/183526>
WebKit Commit Bot
Comment 4 2015-04-28 20:58:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.