Deadlock on applications using JSContext on non-main thread https://bugs.webkit.org/show_bug.cgi?id=144370

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-04-28
Reviewed by Timothy Hatcher.

* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::singleton):
Prevent a possible deadlock by assuming we can synchronously
run something on the main queue at this time.

Canonical link: https://commits.webkit.org/162374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183526 268f45cc-cd09-0410-ab3c-d52691b4dbfc